salesforce_sfdx/main/default/objects/CCI_Integration_Error_Retry__c/CCI_Integration_Error_Retry__c.object-meta.xml
<CustomObject>
    <label>Integration Error Retry</label>
    <nameField>
        <displayFormat>E-{0000000000}</displayFormat>
        <label>ErrorLogId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Error Retries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>