salesforce_sfdx/main/default/objects/CCI_Integration_Error_Retry__c/fields/Integration_Procedure_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Procedure_Name__c</fullName>
    <label>Integration Procedure Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>