salesforce_sfdx/main/default/objects/CCI_Integration_Error_Retry__c/fields/Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Message_ID__c</fullName>
    <description>Correlation Message ID</description>
    <label>Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>