salesforce_sfdx/main/default/objects/CCI_Integration_Error_Retry__c/fields/Parent_Record_SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_SFDC_ID__c</fullName>
    <description>Parent Salesforce Reference Object ID</description>
    <label>Parent Record SFDC ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>