salesforce_sfdx/main/default/objects/CCI_Integration_Error_Retry__c/fields/Retry_Reason__c.field-meta.xml
<CustomField>
    <fullName>Retry_Reason__c</fullName>
    <label>Retry Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>