salesforce_sfdx/main/default/objects/CCI_Integration_Error_Retry__c/fields/Retry_Status__c.field-meta.xml
<CustomField>
    <fullName>Retry_Status__c</fullName>
    <label>Retry Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>