salesforce_sfdx/main/default/objects/CCI_Integration_Error_Retry__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Typical Status Values are - 
Pending
Processing
Processed
Error</description>
    <label>Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>