salesforce_sfdx/main/default/objects/CCI_Integration_Error_Retry__c/fields/System_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Name__c</fullName>
    <description>System integrating with</description>
    <label>System_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>