salesforce_sfdx/main/default/objects/CCI_Integration_Error_Retry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Message_ID__c</columns>
    <columns>Parent_Record_SFDC_ID__c</columns>
    <columns>Retry_Reason__c</columns>
    <columns>System_Name__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>